# ComfyUI_LibreTranslate

./: README.md  pyproject.toml  translate_node.py
